@@ -1,2 +1,0 @@
-#!/bin/bash
-/opt/vlmcsd/vlmcsd-Solaris-x64
